--- a/.github/workflows/deploy_to_int.yml
+++ b/.github/workflows/deploy_to_int.yml
@@ -1,26 +1,12 @@
 name: Deploy to int Sandbox
 
 on:
-  pull_request:
-    types: [closed]
-    branches:
-      - integration
+  push:
+    branches: [ integration ]
 
-jobs:
-  validate_merge_to_integration:
-    runs-on: ubuntu-latest
-    if: github.event.pull_request.merged
-
-    steps:
-      - name: checkout
-        if: github.event.pull_request.merged
-        uses: actions/checkout@v1
-
-     
+jobs:     
   deploy-to-qa:      
     runs-on: ubuntu-latest
-    needs: validate_merge_to_integration
-    
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
