--- a/.github/workflows/run_unit_test_int.yml
+++ b/.github/workflows/run_unit_test_int.yml
@@ -1,9 +1,8 @@
 name: Run unit tests on int Sandbox
 
-on: 
-  pull_request:
-    branches:
-      - integration
+on:
+  push:
+    branches: [ integration ]
     paths:
       - '.github/workflows/**'
       - 'force-app/**'
