--- a/.github/workflows/run_unit_test_int.yml
+++ b/.github/workflows/run_unit_test_int.yml
@@ -8,13 +8,13 @@ on:
       - 'force-app/**'
 
 jobs:
-
   run-unit-tests-on-qa:     
     runs-on: ubuntu-latest
     steps:
-      - name : checkout branch
-        uses: actions/checkout@v2
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+        - name: Checkout source code
+          uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+        - name: Run a one-line script
+          run: echo Hello, world!
