--- a/.github/workflows/run_unit_test_int.yml
+++ b/.github/workflows/run_unit_test_int.yml
@@ -1,7 +1,7 @@
 name: Run unit tests on int Sandbox
 
 on:
-  push:
+  pull_request:
     branches: [ integration ]
     paths:
       - '.github/workflows/**'
