--- a/.github/workflows/run_unit_test_int.yml
+++ b/.github/workflows/run_unit_test_int.yml
@@ -8,7 +8,7 @@ on:
       - 'force-app/**'
 
 jobs:
-  run-unit-tests-on-qa:     
+  run-unit-tests-on-int:     
     runs-on: ubuntu-latest
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
