--- a/.github/workflows/run_unit_test_int.yml
+++ b/.github/workflows/run_unit_test_int.yml
@@ -1,7 +1,7 @@
 name: Run unit tests on int Sandbox
 
 on:
-  pull_request:
+  push:
     branches: [ integration ]   
     paths:
       - '.github/workflows/**'
