--- a/.github/workflows/run_unit_test_int.yml
+++ b/.github/workflows/run_unit_test_int.yml
@@ -2,7 +2,8 @@ name: Run unit tests on int Sandbox
 
 on:
   pull_request:
-    branches: [ integration ]   
+    branches: [ integration ]  
+    types: [opened, synchronize, reopened] 
     paths:
       - '.github/workflows/**'
       - 'force-app/**'
