--- a/.github/workflows/deploy_to_int.yml
+++ b/.github/workflows/deploy_to_int.yml
@@ -3,6 +3,9 @@ name: Deploy to int Sandbox
 on:
   push:
     branches: [ integration ]
+    paths:
+      - '.github/workflows/**'
+      - 'force-app/**'
 
 jobs:     
   deploy-to-int:      
