--- a/.github/workflows/run_unit_test_on_qa.yml
+++ b/.github/workflows/run_unit_test_on_qa.yml
@@ -1,11 +1,12 @@
-name: Run unit tests on QA Sandbox
+name: Run unit tests on Integration Sandbox
 
 on: 
   pull_request:
     branches: [ integration ]
+    types: [opened, synchronize, reopened]
 
 jobs:
-  run-unit-tests-on-qa:     
+  run-unit-tests-on-int:     
     runs-on: ubuntu-latest
     steps:
       - name: Install Salesforce CLI
@@ -25,8 +26,8 @@ jobs:
           path: main
       - name: Set environment variable
         run: |
-          cat ./env/.github/workflows/env | grep QA_CONSUMER_KEY= | grep -o '".*"' | sed 's/"//g' > ./main/QA_CONSUMER_KEY
-          cat ./env/.github/workflows/env | grep QA_USERNAME= | grep -o '".*"' | sed 's/"//g' > ./main/QA_USERNAME
+          cat ./env/.github/workflows/env | grep INT_CONSUMER_KEY= | grep -o '".*"' | sed 's/"//g' > ./main/INT_CONSUMER_KEY
+          cat ./env/.github/workflows/env | grep INT_USERNAME= | grep -o '".*"' | sed 's/"//g' > ./main/INT_USERNAME
     
       - name: Convert metadata to mdapi format
         run: |
@@ -36,7 +37,7 @@ jobs:
       - name: Authenticate Sandbox
         run: |
           echo "${SALESFORCE_JWT_SECRET_KEY}" > server.key
-          sfdx force:auth:jwt:grant --jwtkeyfile ./server.key --setalias qaorg --instanceurl https://test.salesforce.com --clientid $(cat ./main/QA_CONSUMER_KEY) --username $(cat ./main/QA_USERNAME)
+          sfdx force:auth:jwt:grant --jwtkeyfile ./server.key --setalias qaorg --instanceurl https://test.salesforce.com --clientid $(cat ./main/INT_CONSUMER_KEY) --username $(cat ./main/INT_USERNAME)
         env:
           SALESFORCE_JWT_SECRET_KEY: ${{ secrets.SFDX_JWT_SECRET_NONPROD }}
 
