--- a/.github/workflows/deploy_to_qa.yml
+++ b/.github/workflows/deploy_to_qa.yml
@@ -1,29 +1,16 @@
 name: Deploy to QA Sandbox
 
 on:
-  pull_request:
-    types: [closed]
+  push:
     branches:
-      - integration
+      - release-**
     paths:
       - '.github/workflows/**'
       - 'force-app/**'
 
 jobs:
-  validate_merge_to_integration:
-    runs-on: ubuntu-latest
-    if: github.event.pull_request.merged
-
-    steps:
-      - name: checkout
-        if: github.event.pull_request.merged
-        uses: actions/checkout@v1
-
-     
   deploy-to-qa:      
     runs-on: ubuntu-latest
-    needs: validate_merge_to_integration
-    
     steps:
       - name: Install Salesforce CLI
         run: |
@@ -60,5 +47,5 @@ jobs:
       - name: Deploy metadata to Target Sandbox
         run: |
          cd main
-         sfdx force:source:deploy --wait 180 -u qaorg --manifest metadatadeploy/package.xml --verbose
+         sfdx force:source:deploy --wait 180 --checkonly -u qaorg --manifest metadatadeploy/package.xml --verbose
   #      sfdx force:source:deploy --wait 180 --checkonly -u qaorg --manifest metadatadeploy/package.xml --verbose
