--- a/.github/workflows/deploy_to_qa.yml
+++ b/.github/workflows/deploy_to_qa.yml
@@ -1,15 +1,11 @@
 name: Deploy to QA Sandbox
-
 on:
   push:
     branches:
       - release-**
-    paths:
-      - '.github/workflows/**'
-      - 'force-app/**'
 
 jobs:
-  deploy-to-qa:      
+  deploy-to-qa:
     runs-on: ubuntu-latest
     steps:
       - name: Install Salesforce CLI
@@ -18,7 +14,7 @@ jobs:
           mkdir sfdx-cli
           tar xJf sfdx-cli-v7.72.0-697e9faee2-linux-x64.tar.xz -C sfdx-cli --strip-components 1
           ./sfdx-cli/install
-      - name: Checkout integration branch and grab environment keys
+      - name: Checkout dev branch and grab environment keys
         uses: actions/checkout@v2
         with:
           ref: 'integration'
@@ -31,21 +27,13 @@ jobs:
         run: |
           cat ./env/.github/workflows/env | grep QA_CONSUMER_KEY= | grep -o '".*"' | sed 's/"//g' > ./main/QA_CONSUMER_KEY
           cat ./env/.github/workflows/env | grep QA_USERNAME= | grep -o '".*"' | sed 's/"//g' > ./main/QA_USERNAME
-    
-      - name: Convert metadata to mdapi format
-        run: |
-          cd main
-          sfdx force:source:convert --rootdir force-app --outputdir metadatadeploy
-    
       - name: Authenticate Sandbox
         run: |
           echo "${SALESFORCE_JWT_SECRET_KEY}" > server.key
           sfdx force:auth:jwt:grant --jwtkeyfile ./server.key --setalias qaorg --instanceurl https://test.salesforce.com --clientid $(cat ./main/QA_CONSUMER_KEY) --username $(cat ./main/QA_USERNAME)
         env:
           SALESFORCE_JWT_SECRET_KEY: ${{ secrets.SFDX_JWT_SECRET_NONPROD }}
-          
-      - name: Deploy metadata to Target Sandbox
+      - name: Deploy code to qaorg Sandbox
         run: |
-          cd main
-          sfdx force:source:deploy --wait 180 --checkonly -u qaorg --manifest metadatadeploy/package.xml --verbose
-  #       sfdx force:source:deploy --wait 180 --checkonly -u qaorg --manifest metadatadeploy/package.xml --verbose
+          cd ./main
+          sfdx force:source:deploy --wait 180 -u qaorg --manifest manifest/package.xml --verbose
