--- a/.github/workflows/run_unit_test_qa.yml
+++ b/.github/workflows/run_unit_test_qa.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
     branches:
       - release-**
+    types: [opened, synchronize, reopened]
     paths:
       - '.github/workflows/**'
       - 'force-app/**'
