--- a/.github/workflows/run_unit_test_on_qa.yml
+++ b/.github/workflows/run_unit_test_on_qa.yml
@@ -2,7 +2,7 @@ name: Run_Apex_on_QA-Sandbox
 on:
   pull_request:
     branches:
-      - release-**
+      - integration
     paths:
       - '.github/workflows/**'
       - 'force-app/**'
