--- a/.github/workflows/run_unit_test_all.yml
+++ b/.github/workflows/run_unit_test_all.yml
@@ -1,11 +1,10 @@
-name: Run Apex on Prod Sandbox
-on:
+name: Run unit tests on Integration Sandbox
+on: 
   pull_request:
-    branches: 
-      - master
+    branches: [ integration, release-**, master ]
     types: [opened, synchronize, reopened]
-jobs:   
-  run-unit-tests-on-prod:      
+jobs:
+  run-unit-tests-on-int:     
     runs-on: ubuntu-latest
     steps:
       - name: Install Salesforce CLI
@@ -25,8 +24,8 @@ jobs:
           path: main
       - name: Set environment variable
         run: |
-          cat ./env/.github/workflows/env | grep PROD_CONSUMER_KEY= | grep -o '".*"' | sed 's/"//g' > ./main/PROD_CONSUMER_KEY
-          cat ./env/.github/workflows/env | grep PROD_USERNAME= | grep -o '".*"' | sed 's/"//g' > ./main/PROD_USERNAME
+          cat ./env/.github/workflows/env | grep INT_CONSUMER_KEY= | grep -o '".*"' | sed 's/"//g' > ./main/INT_CONSUMER_KEY
+          cat ./env/.github/workflows/env | grep INT_USERNAME= | grep -o '".*"' | sed 's/"//g' > ./main/INT_USERNAME
       - name: Convert metadata to mdapi format
         run: |
           cd main
@@ -34,17 +33,10 @@ jobs:
       - name: Authenticate Sandbox
         run: |
           echo "${SALESFORCE_JWT_SECRET_KEY}" > server.key
-          sfdx force:auth:jwt:grant --jwtkeyfile ./server.key --setalias prodOrg --instanceurl https://test.salesforce.com --clientid $(cat ./main/PROD_CONSUMER_KEY) --username $(cat ./main/PROD_USERNAME)
+          sfdx force:auth:jwt:grant --jwtkeyfile ./server.key --setalias intorg --instanceurl https://test.salesforce.com --clientid $(cat ./main/INT_CONSUMER_KEY) --username $(cat ./main/INT_USERNAME)
         env:
-        # update the key of prod name
           SALESFORCE_JWT_SECRET_KEY: ${{ secrets.SFDX_JWT_SECRET_NONPROD }}
-          
       - name: Run Apex Tests on Target Sandbox
         run: |
           cd main
-          sfdx force:source:deploy --wait 180 --checkonly --testlevel RunLocalTests -u prodOrg --manifest metadatadeploy/package.xml --verbose
-  #       sfdx force:source:deploy --wait 180 --checkonly -u prodorg --manifest metadatadeploy/package.xml --verbose
-  #       sfdx force:source:deploy --wait 180 --checkonly -u prodorg --manifest metadatadeploy/package.xml --verbose
-       
-     
-     
+          sfdx force:source:deploy --wait 180 --checkonly --testlevel RunLocalTests -u intorg --manifest metadatadeploy/package.xml --verbose
