--- a/.github/workflows/run_unit_test_all.yml
+++ b/.github/workflows/run_unit_test_all.yml
@@ -1,4 +1,4 @@
-name: Run unit tests on Integration Sandbox
+name: Run unit tests on all Integration Sandbox
 on: 
   pull_request:
     branches: [ integration, release-**, master ]
