--- a/.github/workflows/deploy_to_uat.yml
+++ b/.github/workflows/deploy_to_uat.yml
@@ -4,6 +4,8 @@ on:
     workflows: ["Run unit tests on UAT Sandbox"]
     branches:
       - release-**
+    types:
+      - completed
   workflow_dispatch:
 jobs:
   run-unit-tests-on-uat:     
