--- a/.github/workflows/deploy_to_uat.yml
+++ b/.github/workflows/deploy_to_uat.yml
@@ -8,7 +8,7 @@ on:
       - completed
   workflow_dispatch:
 jobs:
-  run-unit-tests-on-uat:     
+  deploy-on-uat:     
     runs-on: ubuntu-latest
     steps:
       - name: Install Salesforce CLI
