--- a/.github/workflows/deploy_to_uat.yml
+++ b/.github/workflows/deploy_to_uat.yml
@@ -28,6 +28,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           path: main
+        run: echo running on branch ${GITHUB_REF##*/}
       - name: Branch name after
         run: echo running on branch ${GITHUB_REF##*/}
       - name: Set environment variable
