--- a/.github/workflows/run_unit_test_on_uat.yml
+++ b/.github/workflows/run_unit_test_on_uat.yml
@@ -37,4 +37,4 @@ jobs:
       - name: Run Apex Tests on Target Sandbox
         run: |
           cd main
-          sfdx force:source:deploy --wait 180 --checkonly --testlevel RunLocalTests -u uatorg --manifest metadatadeploy/package.xml --verbose
+      #    sfdx force:source:deploy --wait 180 --checkonly --testlevel RunLocalTests -u uatorg --manifest metadatadeploy/package.xml --verbose
