--- a/.github/workflows/dependantworkflow.yml
+++ b/.github/workflows/dependantworkflow.yml
@@ -27,4 +27,6 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
-          cat Readme.md
+          pwd
+          ls
+
