--- a/.github/workflows/dependantworkflow.yml
+++ b/.github/workflows/dependantworkflow.yml
@@ -3,7 +3,7 @@
 name: dependant workflow
 on:
   workflow_run:
-    workflows: ["manual trigger"]
+    workflows: ["Run unit tests on UAT Sandbox"]
     branches:
       - release-**
     types:
