--- a/.github/workflows/dependantworkflow.yml
+++ b/.github/workflows/dependantworkflow.yml
@@ -3,14 +3,13 @@
 name: dependant workflow
 on:
   workflow_run:
-    workflows: ["Run unit tests on UAT Sandbox"]
+    workflows: ["manual trigger"]
     branches:
       - release-**
     types:
       - completed
   workflow_dispatch:
 jobs:
-
   depandantjob:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
@@ -25,8 +24,8 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          echo "Add other actions to build"
+          echo "test and deploy your project."
           pwd
           ls
 
